 - Added ServerCall.getRequestInput() method to factorize common logic among HTTP server connectors.
 - Added ClientCall.getResponseOutput() method to factorize common logic among HTTP and FILE connectors.
 - Moved StringUtils.normalizePath() method to FileReference.
 - Added JarReference supporting the JAR URIs defined by JDK's JarUrlConnection.
 
1.0 beta 13 (2006-05-29)
 - Updated StringTemplate and StringTemplateRepresentation to allow the usage of different delimiters for variable insertion and instructions like conditions.
   The goal is to prevent conflict between variable names and (future) instruction names.
   Now the delimiters must be different and default to ${variableName} and #[if test1]...#[else if test2]...#[else]...#[end].
   WARNING: this has a potential impact on existing application using the old delimiters for instructions such as for the RedirectResltet target URI pattern.
 - Added support for single quotes to delimit the variable names in CallModel instances. Prevents the needs for double quote escaping in Java strings.
 - Enhanced the Reference to strictly conform to the URI RFC 3896. New methods, normalization code, resolution of relative URIs and relativization.
 - GuardChainlet doesn't log the password anymore. Reported by AJ Barnes.
 - Call.setRedirectionRef() and setResourceRef() now accept relative URIs (like ".."). The base URi is the current context. Suggested by Yuri de Wit.
 - Fixed bug in SimpleCall forgetting to add the port number in the request URIs.
 - Optimized response time of the Simple HTTP server connector. Suggested by Niall Gallagher.
 - Added DefaultBuilder.upMaplet() and upMaplet(level) to go up to parent Maplet builders without the need to count non Maplet builders 
   and having to cast.
 - Added new RestletContainerBuilder constructor taking an existing RestletContainer instance.
 - Added empty RestletContainer constructor in case the name is never used.