@@ -1,1 +1,1 @@
-com.noelios.restlet.impl.HttpClientImpl	# HTTP
+com.noelios.restlet.impl.HttpClient	# HTTP
